# tego-core

./: .gitignore  BUILDING.md  CMakeCache.txt  CMakeLists.txt  GMakeFile.tor  Makefile  Makefile.Debug  Makefile.Release  README.md  cmake_install.cmake  hardened.pri  ricochet-refresh  ricochet-refresh.cbp  ricochet.pro
config/: ricochet.json  ricochet.json1
config.tests/sanitize/: Makefile
config.tests/sanitize-ubsan/: Makefile
config.tests/sanitize-ubsan-more/: Makefile  sanitize-ubsan-more
config.tests/stack-protector-strong/: Makefile  stack-protector-strong
config.tests/vtable-verify/: Makefile
config/tor/: state
debian/: changelog  control  install  make-icons.sh  rules
debug/: OutboundConnector.moc  moc_AuthHiddenServiceChannel.cpp  moc_AuthenticateCommand.cpp  moc_ContactRequestChannel.cpp  moc_ContactUser.cpp  moc_ContactsManager.cpp  moc_ContactsModel.cpp  moc_GetConfCommand.cpp  moc_LanguagesModel.cpp  moc_MainWindow.cpp  moc_OutgoingContactRequest.cpp  moc_ProtocolInfoCommand.cpp  moc_TorManager.cpp  moc_TorProcess_p.cpp  moc_UserIdentity.cpp  moc_predefs.h  qrc_embedded.cpp  qrc_icons.cpp  qrc_qml.cpp
lib/onion_ed25519_signature/: README.md  ed25519-donna.h  ed25519-hash.h  ed25519.c  orconfig.h  sign.h
packaging/: win32.iss
release/: Settings.moc  TorControl.moc  TorManager.moc  moc_AddOnionCommand.cpp  moc_Channel.cpp  moc_Channel_p.cpp  moc_ChatChannel.cpp  moc_Connection.cpp  moc_Connection_p.cpp  moc_ContactIDValidator.cpp  moc_ControlChannel.cpp  moc_ConversationModel.cpp  moc_HiddenService.cpp  moc_IdentityManager.cpp  moc_IncomingRequestManager.cpp  moc_LinkedText.cpp  moc_OutboundConnector.cpp  moc_PendingOperation.cpp  moc_SetConfCommand.cpp  moc_Settings.cpp  moc_TorControl.cpp  moc_TorControlCommand.cpp  moc_TorControlSocket.cpp  moc_TorProcess.cpp  moc_TorSocket.cpp  moc_predefs.h  qrc_embedded.cpp  qrc_sounds.cpp
ricochet-refresh_autogen/: mocs_compilation.cpp
ricochet-refresh_autogen/PRMOGMWJPH/: moc_ContactIDValidator.cpp  moc_ContactUser.cpp  moc_ContactsManager.cpp  moc_ConversationModel.cpp  moc_IdentityManager.cpp  moc_IncomingRequestManager.cpp  moc_OutgoingContactRequest.cpp  moc_UserIdentity.cpp
ricochet-refresh_autogen/VSCBVMNR7M/: moc_PendingOperation.cpp  moc_Settings.cpp
ricochet-refresh_autogen/X5TIYENYS2/: moc_AuthHiddenServiceChannel.cpp  moc_Channel.cpp  moc_Channel_p.cpp  moc_ChatChannel.cpp  moc_Connection.cpp  moc_Connection_p.cpp  moc_ContactRequestChannel.cpp  moc_ControlChannel.cpp  moc_OutboundConnector.cpp
ricochet-refresh_autogen/YFEXCPMSAB/: moc_AddOnionCommand.cpp  moc_AuthenticateCommand.cpp  moc_GetConfCommand.cpp  moc_HiddenService.cpp  moc_ProtocolInfoCommand.cpp  moc_SetConfCommand.cpp  moc_TorControl.cpp  moc_TorControlCommand.cpp  moc_TorControlSocket.cpp  moc_TorManager.cpp  moc_TorProcess.cpp  moc_TorProcess_p.cpp  moc_TorSocket.cpp
ricochet-refresh_autogen/YPKJ5OE7LN/: moc_ContactsModel.cpp  moc_LanguagesModel.cpp  moc_LinkedText.cpp  moc_MainWindow.cpp
src/: Info.plist  main.cpp
src/core/: ContactIDValidator.cpp  ContactUser.cpp  UserIdentity.cpp
src/protocol/: AuthHiddenService.pb.cc  AuthHiddenService.pb.h  AuthHiddenServiceChannel.cpp  AuthHiddenServiceChannel.h  ChatChannel.cpp  ChatChannel.pb.cc  ChatChannel.pb.h  ContactRequestChannel.pb.cc  ContactRequestChannel.pb.h  ControlChannel.pb.cc  ControlChannel.pb.h  OutboundConnector.cpp  OutboundConnector.h
src/tego-ui/core/: ContactIDValidator.cpp
src/tego-ui/ui/qml/: AddContactDialog.qml
src/tests/tst_cryptokey/: tst_cryptokey.cpp
src/tor/: AddOnionCommand.cpp  HiddenService.cpp  HiddenService.h  TorControl.cpp  TorManager.cpp  TorManager.h  TorProcess.cpp
src/ui/qml/: AddContactDialog.qml  ContactIDField.qml  MainWindow.qml
src/utils/: CryptoKey.cpp  CryptoKey.h  SecureRNG.cpp
translation/: ricochet_bg.qm  ricochet_cs.qm  ricochet_da.qm  ricochet_de.qm  ricochet_es.qm  ricochet_et_EE.qm  ricochet_fi.qm  ricochet_fil_PH.qm  ricochet_fr.qm  ricochet_he.qm  ricochet_it.qm  ricochet_it_IT.qm  ricochet_ja.qm  ricochet_nb.qm  ricochet_nl_NL.qm  ricochet_pl.qm  ricochet_pt_BR.qm  ricochet_pt_PT.qm  ricochet_ru.qm  ricochet_sl.qm  ricochet_sq.qm  ricochet_sv.qm  ricochet_tr.qm  ricochet_uk.qm  ricochet_zh.qm  ricochet_zh_HK.qm
